@@ -1,5 +1,7 @@
 Version 1.0-9 (2013-04-19)
 o Added Pottery2 data, extending car::Pottery
+o Fixed heplot3d to minimize striated rendering of ellipsoids, and also modified default
+  colors and fill.alpha
 
 Version 1.0-8 (2013-02-22)
 o In heplot.mlm(), added ... to label.ellipse to be able to pass cex=
